--- a/lecm-im/gwt-debug/src/main/webapp/index.html
+++ b/lecm-im/gwt-debug/src/main/webapp/index.html
@@ -23,56 +23,64 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript">
-        var spamCall = function(callback)
-        {
-            callback(true);
-        }
+    <!--<script type="text/javascript" language="javascript">-->
+        <!--var spamCall = function(callback)-->
+        <!--{-->
+            <!--callback(true);-->
+        <!--}-->
 
-        function setCookie(c_name,value,exdays)
-        {
-            var exdate=new Date();
-            exdate.setDate(exdate.getDate() + exdays);
-            var c_value=escape(value) + ((exdays==null) ? "" : "; expires="+exdate.toUTCString());
-            document.cookie=c_name + "=" + c_value;
-        }
+        <!--function setCookie(c_name,value,exdays)-->
+        <!--{-->
+            <!--var exdate=new Date();-->
+            <!--exdate.setDate(exdate.getDate() + exdays);-->
+            <!--var c_value=escape(value) + ((exdays==null) ? "" : "; expires="+exdate.toUTCString());-->
+            <!--document.cookie=c_name + "=" + c_value;-->
+        <!--}-->
 
-        setCookie('JID', 'q', new Date() + 1);
-        setCookie('JIDPWD', 'q', new Date() + 1);
+        <!--setCookie('JID', 'q', new Date() + 1);-->
+        <!--setCookie('JIDPWD', 'q', new Date() + 1);-->
 
 
-    </script>
+    <!--</script>-->
 
 
 
     <script type="text/javascript" language="javascript" src="js/yui-common.js"></script>
     <script type="text/javascript" language="javascript" src="js/bubbling.v2.1.js"></script>
 
-    <script type="text/javascript" language="javascript">
-        var iBubblingSubscriber = function(callback)
-        {
-            YAHOO.Bubbling.on("ru.it.lecm.im.toggle-chat", function(layer, args) {
-                console.log("Before CallBack");
-                callback(true);
-                console.log(callback);
-            });
-        }
-    </script>
+    <!--<script type="text/javascript" language="javascript">-->
+        <!--var iBubblingSubscriber = function(callback)-->
+        <!--{-->
+            <!--YAHOO.Bubbling.on("ru.it.lecm.im.toggle-chat", function(layer, args) {-->
+                <!--console.log("Before CallBack");-->
+                <!--callback(true);-->
+                <!--console.log(callback);-->
+            <!--});-->
+        <!--}-->
+    <!--</script>-->
 
     <script type="text/javascript" language="javascript" src="LecmIM/ijab_config.js"></script>
     <script type="text/javascript" language="javascript" src="LecmIM/LecmIM.nocache.js"></script>
 
+    <script type="text/javascript" lang="javascript">
 
-    <script type="text/javascript" language="javascript">
-        var toggleChat = function()
-        {
-            YAHOO.Bubbling.fire("ru.it.lecm.im.toggle-chat",
-                    {
-                        message: "Hello World."
-                    });
+        updateMessagesCountSubscriber( function(count){
+            var elem = document.getElementById("myElem");
+            elem.innerHTML = count;
+        } ) ;
 
-        }
     </script>
+
+    <!--<script type="text/javascript" language="javascript">-->
+        <!--var toggleChat = function()-->
+        <!--{-->
+            <!--YAHOO.Bubbling.fire("ru.it.lecm.im.toggle-chat",-->
+                    <!--{-->
+                        <!--message: "Hello World."-->
+                    <!--});-->
+
+        <!--}-->
+    <!--</script>-->
 
 </head>
 
@@ -98,6 +106,9 @@
 <h1>Web Application Starter Project</h1>
 
 <button onclick="toggleChat()">Toggle Chat</button>
+<div> сообщений:
+    <div id="myElem">0</div>
+</div>
 
 </body>
 </html>
