Вывод количества сообщений в контакт листе
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@875 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-im/gwt-debug/src/main/webapp/index.html
+++ b/lecm-im/gwt-debug/src/main/webapp/index.html
@@ -12,7 +12,7 @@
 
     <!--Подгружаем чатик и настройки-->
 
-    <script type="text/javascript" language="javascript" src="lecm_im/ijab_config.js"></script>
+    <script type="text/javascript" language="javascript" src="lecm_im/lecm_im_config.js"></script>
     <script type="text/javascript" language="javascript" src="lecm_im/lecm_im.nocache.js"></script>
 
     <!--Подписываемся на события-->
