messenger icons, view
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1381 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-im/gwt-debug/src/main/webapp/index.html
+++ b/lecm-im/gwt-debug/src/main/webapp/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" language="javascript">//<![CDATA[
 
         updateMessagesCountSubscriber( function(count){
-            var elem = document.getElementById("myElem");
+            var elem = document.getElementById("msgCounter");
             elem.innerHTML = count;
         } ) ;
 	//]]>
@@ -47,7 +47,7 @@
 
 <button onclick="toggleChat()">Toggle Chat</button>
 <div> сообщений:
-    <div id="myElem">0</div>
+    <div id="msgCounter">0</div>
 </div>
 
 </body>
