Позиционирование мессенджера в отладочном приложении
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1516 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-im/gwt-debug/src/main/webapp/index.html
+++ b/lecm-im/gwt-debug/src/main/webapp/index.html
@@ -5,12 +5,12 @@
 
     <title>Lecm Im Debug Project</title>
 
-    <!--Эмулируем Альфрес-->
+    <!--Эмулируем АльфресКу-->
 
     <script type="text/javascript" language="javascript" src="js/yui-common.js"></script>
     <script type="text/javascript" language="javascript" src="js/bubbling.v2.1.js"></script>
 
-    <!--Подгружаем чатик и настройки-->
+    <!--Подгружаем чатик и настройки -->
 
     <script type="text/javascript" language="javascript" src="lecm_im/lecm_im_config.js"></script>
     <script type="text/javascript" language="javascript" src="lecm_im/lecm_im.nocache.js"></script>
@@ -25,6 +25,13 @@
         } ) ;
 	//]]>
     </script>
+
+    <style>
+        #ijab {
+            left: 100px !important;
+        }
+
+    </style>
 
 
 </head>
